firbase authentication added

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,14 @@
 # testing
 /coverage
 
+
 # production
+
 /build
 
+config.js
 # misc
-.DS_Store
+ .DS_Store
 .env.local
 .env.development.local
 .env.test.local
